# mouse-benchmark

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
include/: Config.hpp  Metrics.hpp  MouseBenchmark.hpp  Utils.hpp
src/: Metrics.cpp  MouseBenchmark.cpp  main.cpp
